--- a/Training.css
+++ b/Training.css
@@ -27,10 +27,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 429px;
-  }
-
   .u-section-1 .u-text-3 {
     width: 578px;
   }
@@ -41,6 +37,7 @@
 
   .u-section-1 .u-btn-2 {
     margin-right: 212px;
+    margin-bottom: 28px;
   }
 }
 
@@ -61,7 +58,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 428px;
+    min-height: 436px;
   }
 
   .u-section-1 .u-text-1 {
@@ -86,17 +83,17 @@
 
   .u-section-1 .u-btn-2 {
     margin-right: 24px;
-    margin-bottom: 52px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 537px;
+    min-height: 538px;
   }
 
   .u-section-1 .u-text-1 {
     width: 340px;
+    margin-top: 53px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -271,18 +268,41 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 529px;
+  min-height: 720px;
 }
 
 .u-section-3 .u-layout-wrap-1 {
-  margin: 60px auto 60px 0;
+  margin: 60px 0 60px auto;
 }
 
-.u-section-3 .u-layout-cell-1 {
-  min-height: 409px;
+.u-section-3 .u-image-1 {
+  min-height: 305px;
+  background-position: 50% 50%;
+  background-image: url("images/pexels-divinetechygirl-1181406.jpg");
+  background-size: cover;
 }
 
 .u-section-3 .u-container-layout-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  padding: 30px;
+}
+
+.u-section-3 .u-image-2 {
+  min-height: 305px;
+  background-image: url("images/pexels-divinetechygirl-1181233.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-layout-cell-3 {
+  min-height: 610px;
+}
+
+.u-section-3 .u-container-layout-3 {
   padding: 30px;
 }
 
@@ -303,20 +323,9 @@
   margin: 30px auto 0 0;
 }
 
-.u-section-3 .u-image-1 {
-  min-height: 409px;
-  background-image: url("images/14102246_175860122838799_7539604088175291224_n.jpg");
-  background-position: 0% 50%;
-  background-size: cover;
-}
-
-.u-section-3 .u-container-layout-2 {
-  padding: 30px;
-}
-
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 436px;
+    min-height: 559px;
   }
 
   .u-section-3 .u-layout-wrap-1 {
@@ -324,32 +333,50 @@
     margin-left: initial;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 337px;
+  .u-section-3 .u-image-1 {
+    min-height: 251px;
   }
 
-  .u-section-3 .u-image-1 {
-    min-height: 337px;
+  .u-section-3 .u-image-2 {
+    min-height: 251px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 503px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 334px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 382px;
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 258px;
+    min-height: 192px;
+  }
+
+  .u-section-3 .u-image-2 {
+    min-height: 192px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 100px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 251px;
+    min-height: 540px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: -2173px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-image-1 {
+    min-height: 288px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -357,11 +384,16 @@
     padding-right: 10px;
   }
 
-  .u-section-3 .u-image-1 {
-    min-height: 581px;
+  .u-section-3 .u-image-2 {
+    min-height: 288px;
   }
 
   .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -369,10 +401,36 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 158px;
+    min-height: 672px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: -1588px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 366px;
+    min-height: 181px;
   }
+
+  .u-section-3 .u-image-2 {
+    min-height: 181px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 243px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 60px auto 0;
+}
+
+.u-section-4 .u-text-2 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-btn-1 {
+  margin: 30px auto 60px;
 }
