--- a/Consulting.css
+++ b/Consulting.css
@@ -24,29 +24,23 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-3 {
-    width: 578px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 235px;
+    width: 635px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 430px;
+    min-height: 419px;
   }
 
   .u-section-1 .u-btn-1 {
     margin-top: 41px;
-    margin-bottom: 39px;
-    margin-left: 146px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 436px;
+    min-height: 435px;
   }
 
   .u-section-1 .u-text-1 {
@@ -66,31 +60,30 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-bottom: 28px;
-    margin-left: 51px;
+    margin-bottom: 27px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 538px;
+    min-height: 411px;
   }
 
   .u-section-1 .u-text-1 {
     width: 340px;
-    margin-top: 124px;
+    margin-top: -35px;
   }
 
   .u-section-1 .u-btn-1 {
     margin-top: 30px;
-    margin-left: auto;
+    margin-bottom: 60px;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 590px;
+  min-height: 533px;
 }
 
 .u-section-2 .u-text-1 {
@@ -105,7 +98,7 @@
 .u-section-2 .u-list-1 {
   grid-template-rows: repeat(1, auto);
   height: auto;
-  margin: 20px auto 60px 0;
+  margin: 20px auto 3px 0;
 }
 
 .u-section-2 .u-repeater-1 {
@@ -187,12 +180,21 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 548px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 39px;
+  }
+
   .u-section-2 .u-text-2 {
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-2 .u-list-1 {
+    margin-bottom: 39px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -211,6 +213,20 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 590px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-bottom: 60px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 5px));
   }
@@ -358,11 +374,11 @@
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 829px;
+    min-height: 831px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-top: 42px;
+    margin-top: 43px;
   }
 
   .u-section-3 .u-text-3 {
@@ -371,7 +387,7 @@
   }
 
   .u-section-3 .u-list-1 {
-    margin-bottom: 42px;
+    margin-bottom: 43px;
   }
 }
 
