--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 537px;
+    min-height: 545px;
   }
 
   .u-section-1 .u-text-1 {
@@ -107,6 +107,7 @@
   .u-section-1 .u-btn-2 {
     margin-top: 20px;
     margin-right: auto;
+    margin-bottom: 60px;
   }
 } .u-section-2 {
   background-image: none;
