--- a/About.css
+++ b/About.css
@@ -99,19 +99,21 @@
 }
 
 .u-section-2 .u-text-1 {
-  text-transform: uppercase;
-  margin: 0;
+  margin: 0 auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
-  margin: 20px auto 0 0;
+  margin: 20px 0 0;
 }
 
 .u-section-2 .u-text-3 {
+  font-style: italic;
+  text-transform: none;
   margin: 20px 0 0;
 }
 
 .u-section-2 .u-btn-1 {
+  border-style: solid;
   margin: 30px auto 0 0;
 }
 
@@ -187,193 +189,256 @@
   .u-section-2 .u-image-1 {
     min-height: 366px;
   }
-} .u-section-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 498px;
+}.u-section-3 .u-sheet-1 {
+  min-height: 403px;
 }
 
 .u-section-3 .u-text-1 {
+  text-transform: uppercase;
   margin: 60px auto 0;
 }
 
 .u-section-3 .u-text-2 {
-  margin: 20px auto 0;
+  margin: 17px auto 0;
 }
 
-.u-section-3 .u-list-1 {
-  grid-template-rows: repeat(1, auto);
-  height: auto;
-  margin: 20px auto 0 0;
+.u-section-3 .u-accordion-1 {
+  width: 1140px;
+  margin: 17px 0 60px;
 }
 
-.u-section-3 .u-repeater-1 {
-  grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
-  min-height: 315px;
-  grid-gap: 10px;
+.u-section-3 .u-accordion-item-1 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.u-section-3 .u-container-layout-1 {
-  padding: 30px;
+.u-section-3 .u-accordion-link-1 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
 }
 
 .u-section-3 .u-icon-1 {
-  height: 64px;
-  width: 64px;
+  height: 15px;
+  width: 15px;
   background-image: none;
-  margin: 0 auto 0 0;
-  padding: 13px;
 }
 
-.u-section-3 .u-text-3 {
-  margin: 30px 0 0;
+.u-section-3 .u-accordion-pane-1 {
+  min-height: 150px;
+  background-image: none;
 }
 
-.u-section-3 .u-text-4 {
-  margin: 20px auto 0 0;
+.u-section-3 .u-container-layout-1 {
+  padding: 20px;
 }
 
-.u-section-3 .u-container-layout-2 {
-  padding: 30px;
+.u-section-3 .u-accordion-item-2 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-2 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
 }
 
 .u-section-3 .u-icon-2 {
-  height: 64px;
-  width: 64px;
+  height: 15px;
+  width: 15px;
   background-image: none;
-  margin: 0 auto 0 0;
-  padding: 13px;
 }
 
-.u-section-3 .u-text-5 {
-  margin: 30px 0 0;
+.u-section-3 .u-accordion-pane-2 {
+  min-height: 150px;
+  background-image: none;
 }
 
-.u-section-3 .u-text-6 {
-  margin: 20px auto 0 0;
+.u-section-3 .u-container-layout-2 {
+  padding: 30px 20px 20px;
 }
 
-.u-section-3 .u-container-layout-3 {
-  padding: 30px;
+.u-section-3 .u-accordion-item-3 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-3 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
 }
 
 .u-section-3 .u-icon-3 {
-  height: 64px;
-  width: 64px;
+  height: 15px;
+  width: 15px;
   background-image: none;
-  margin: 0 auto 0 0;
-  padding: 13px;
 }
 
-.u-section-3 .u-text-7 {
-  margin: 30px 0 0;
+.u-section-3 .u-accordion-pane-3 {
+  min-height: 150px;
+  background-image: none;
 }
 
-.u-section-3 .u-text-8 {
-  margin: 20px auto 0 0;
+.u-section-3 .u-container-layout-3 {
+  padding: 30px 20px 20px;
+}
+
+.u-section-3 .u-accordion-item-4 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-4 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
+}
+
+.u-section-3 .u-icon-4 {
+  height: 15px;
+  width: 15px;
+  background-image: none;
+}
+
+.u-section-3 .u-accordion-pane-4 {
+  min-height: 150px;
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px 20px 20px;
+}
+
+.u-section-3 .u-accordion-item-5 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-5 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
+}
+
+.u-section-3 .u-icon-5 {
+  height: 15px;
+  width: 15px;
+  background-image: none;
+}
+
+.u-section-3 .u-accordion-pane-5 {
+  min-height: 150px;
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-5 {
+  padding: 20px;
+}
+
+.u-section-3 .u-accordion-item-6 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-6 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
+}
+
+.u-section-3 .u-icon-6 {
+  height: 15px;
+  width: 15px;
+  background-image: none;
+}
+
+.u-section-3 .u-accordion-pane-6 {
+  min-height: 150px;
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-6 {
+  padding: 20px;
+}
+
+.u-section-3 .u-accordion-item-7 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-7 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  padding: 25px 20px;
+}
+
+.u-section-3 .u-icon-7 {
+  height: 15px;
+  width: 15px;
+  background-image: none;
+}
+
+.u-section-3 .u-accordion-pane-7 {
+  min-height: 150px;
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-7 {
+  padding: 20px;
 }
 
 .u-section-3 .u-btn-1 {
-  margin: 30px auto 60px;
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-3 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: 16px;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-right: 16px;
-  }
-
-  .u-section-3 .u-text-8 {
-    margin-right: 16px;
+  .u-section-3 .u-accordion-1 {
+    width: 940px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 5px));
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: auto;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-right: auto;
-  }
-
-  .u-section-3 .u-text-8 {
-    margin-right: auto;
+  .u-section-3 .u-accordion-1 {
+    width: 720px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-3 .u-accordion-1 {
+    width: 540px;
+  }
+
   .u-section-3 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-5 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-3 .u-container-layout-3 {
+  .u-section-3 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-7 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-repeater-1 {
-    grid-template-columns: repeat(1, 100%);
-  }
-
-  .u-section-3 .u-icon-1 {
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-text-3 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-4 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-icon-2 {
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-text-5 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-6 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-icon-3 {
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-text-7 {
-    width: auto;
-  }
-
-  .u-section-3 .u-text-8 {
-    width: auto;
-    margin-right: 0;
+  .u-section-3 .u-accordion-1 {
+    width: 340px;
   }
 }
