--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 397px;
+  min-height: 368px;
 }
 
 .u-section-1 .u-text-1 {
@@ -14,54 +14,47 @@
 
 .u-section-1 .u-text-3 {
   font-size: 1.25rem;
-  width: 602px;
-  margin: 20px auto 0;
+  margin: 19px 105px 0;
 }
 
 .u-section-1 .u-btn-1 {
-  margin: 40px auto 0 358px;
-}
-
-.u-section-1 .u-btn-2 {
-  margin: -42px 318px 60px auto;
+  border-style: solid;
+  background-image: none;
+  margin: 40px auto 31px;
+  padding: 10px 24px 10px 23px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 429px;
+    min-height: 400px;
   }
 
   .u-section-1 .u-text-3 {
     width: 578px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 235px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 212px;
+    margin-bottom: 2px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 430px;
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-left: 71px;
+    margin-right: 71px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 41px;
-    margin-left: 146px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 109px;
+    margin-bottom: -28px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 428px;
+    min-height: 399px;
   }
 
   .u-section-1 .u-text-1 {
@@ -74,39 +67,27 @@
   }
 
   .u-section-1 .u-text-3 {
-    width: auto;
     margin-top: 30px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 51px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 24px;
-    margin-bottom: 52px;
+    margin-bottom: -57px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 545px;
+    min-height: 457px;
   }
 
   .u-section-1 .u-text-1 {
     width: 340px;
+    margin-top: -145px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 30px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: 20px;
-    margin-right: auto;
     margin-bottom: 60px;
   }
 } .u-section-2 {
@@ -114,10 +95,11 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 498px;
+  min-height: 556px;
 }
 
 .u-section-2 .u-text-1 {
+  text-transform: uppercase;
   margin: 60px auto 0;
 }
 
@@ -128,7 +110,7 @@
 .u-section-2 .u-list-1 {
   grid-template-rows: repeat(1, auto);
   height: auto;
-  margin: 20px auto 60px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-2 .u-repeater-1 {
@@ -149,6 +131,7 @@
   height: 64px;
   width: 64px;
   background-image: none;
+  color: rgb(255, 255, 255) !important;
   margin: 13px auto 0;
   padding: 13px;
 }
@@ -173,6 +156,7 @@
   height: 64px;
   width: 64px;
   background-image: none;
+  color: rgb(255, 255, 255) !important;
   margin: 13px auto 0;
   padding: 13px;
 }
@@ -197,6 +181,7 @@
   height: 64px;
   width: 64px;
   background-image: none;
+  color: rgb(255, 255, 255) !important;
   margin: 13px auto 0;
   padding: 13px;
 }
@@ -207,6 +192,12 @@
 
 .u-section-2 .u-text-8 {
   margin: 20px 20px 0 1px;
+}
+
+.u-section-2 .u-btn-1 {
+  border-style: solid;
+  background-image: none;
+  margin: 30px auto 60px;
 }
 
 @media (max-width: 1199px) {
@@ -247,6 +238,12 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-list-1 {
+    margin-top: 66px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -264,94 +261,97 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-list-1 {
+    margin-top: 91px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(1, 100%);
   }
-} .u-section-3 {
-  background-image: none;
+}.u-section-3 .u-sheet-1 {
+  min-height: 308px;
 }
 
-.u-section-3 .u-sheet-1 {
-  min-height: 529px;
-}
-
-.u-section-3 .u-layout-wrap-1 {
+.u-section-3 .u-list-1 {
+  grid-template-rows: repeat(1, auto);
   margin: 60px auto 60px 0;
 }
 
-.u-section-3 .u-layout-cell-1 {
-  min-height: 409px;
+.u-section-3 .u-repeater-1 {
+  grid-auto-columns: calc(25% - 7.5px);
+  grid-template-columns: repeat(4, calc(25% - 7.5px));
+  min-height: 188px;
+  grid-gap: 10px;
 }
 
 .u-section-3 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-3 .u-text-1 {
-  text-transform: uppercase;
-  margin: 0;
-}
-
-.u-section-3 .u-text-2 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-3 {
-  margin: 20px 0 0;
-}
-
-.u-section-3 .u-btn-1 {
-  margin: 30px auto 0 0;
-}
-
 .u-section-3 .u-image-1 {
-  min-height: 409px;
-  background-image: url("images/14102246_175860122838799_7539604088175291224_n.jpg");
-  background-position: 0% 50%;
-  background-size: cover;
+  width: 202px;
+  height: 79px;
+  margin: 0 auto;
 }
 
 .u-section-3 .u-container-layout-2 {
-  box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.4);
   padding: 30px;
+}
+
+.u-section-3 .u-image-2 {
+  width: 202px;
+  height: 79px;
+  margin: 0 auto;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-3 {
+  width: 202px;
+  height: 79px;
+  margin: 0 auto;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-4 {
+  width: 202px;
+  height: 79px;
+  margin: 0 auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 436px;
+    min-height: 184px;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
+  .u-section-3 .u-list-1 {
+    height: auto;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 337px;
-  }
-
-  .u-section-3 .u-image-1 {
-    min-height: 337px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 334px;
+    min-height: 451px;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-image-1 {
-    min-height: 258px;
+  .u-section-3 .u-repeater-1 {
+    grid-auto-columns: calc(50% - 5px);
+    grid-template-columns: repeat(2, calc(50% - 5px));
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 251px;
+    min-height: 344px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -359,22 +359,159 @@
     padding-right: 10px;
   }
 
-  .u-section-3 .u-image-1 {
-    min-height: 581px;
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-3 .u-image-1 {
+    height: 49px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 49px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 49px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 49px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+} .u-section-4 {
+  background-image: none;
+}
+
+.u-section-4 .u-sheet-1 {
+  min-height: 529px;
+}
+
+.u-section-4 .u-layout-wrap-1 {
+  margin: 60px auto 60px 0;
+}
+
+.u-section-4 .u-layout-cell-1 {
+  min-height: 409px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-4 .u-text-1 {
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.u-section-4 .u-text-2 {
+  margin: 20px auto 0 0;
+}
+
+.u-section-4 .u-text-3 {
+  margin: 20px 0 0;
+}
+
+.u-section-4 .u-btn-1 {
+  border-style: solid;
+  margin: 30px auto 0 0;
+}
+
+.u-section-4 .u-image-1 {
+  min-height: 409px;
+  background-image: url("images/14102246_175860122838799_7539604088175291224_n.jpg");
+  background-position: 0% 50%;
+  background-size: cover;
+}
+
+.u-section-4 .u-container-layout-2 {
+  box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.4);
+  padding: 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 436px;
+  }
+
+  .u-section-4 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 337px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 337px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 334px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 258px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 251px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 581px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
     min-height: 158px;
   }
 
-  .u-section-3 .u-image-1 {
+  .u-section-4 .u-image-1 {
     min-height: 366px;
   }
 }
