--- a/nicepage.css
+++ b/nicepage.css
@@ -44397,7 +44397,6 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-header .u-nav-1 {
   font-size: 1rem;
-  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -44412,6 +44411,10 @@ a.u-link.u-text-hover-grey-90:hover {
     width: auto;
     margin-top: -54px;
     margin-right: 0;
+  }
+
+  .u-header .u-nav-1 {
+    letter-spacing: normal;
   }
 }
 
