--- a/index.css
+++ b/index.css
@@ -116,7 +116,8 @@
 .u-section-2 .u-repeater-1 {
   grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
   min-height: 315px;
-  grid-gap: 10px;
+  --gap: 10px;
+  grid-auto-columns: calc(33.3333% - 6.66667px);
 }
 
 .u-section-2 .u-list-item-1 {
@@ -206,6 +207,11 @@
     margin-left: initial;
   }
 
+  .u-section-2 .u-repeater-1 {
+    grid-gap: 10px;
+    grid-auto-columns: calc(33.333333333333336% - 6.66667px);
+  }
+
   .u-section-2 .u-text-4 {
     margin-right: 16px;
   }
@@ -222,6 +228,7 @@
 @media (max-width: 991px) {
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 5px));
+    grid-auto-columns: calc(50% - 5.0000025px);
   }
 
   .u-section-2 .u-text-4 {
@@ -242,6 +249,10 @@
     margin-top: 66px;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -269,6 +280,7 @@
 
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(1, 100%);
+    grid-auto-columns: 100%;
   }
 } .u-section-3 {
   background-image: none;
